--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"jquery": "^3.5.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
